project("RCON_VCMP_SERVER_PLUGIN")
add_library(rcon MODULE "main.cpp"  "ReadCFG.cpp" "hook.cpp"  "command.cpp" "command.h")
set_target_properties(rcon PROPERTIES PREFIX "")
set(CMAKE_BUILD_TYPE Release)
if(FORCE_32)
	set_target_properties(rcon PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
	set_target_properties(rcon PROPERTIES OUTPUT_NAME "rcon04rel32")
elseif(NOT WIN32 OR CMAKE_SIZEOF_VOID_P EQUAL 8)
	set_target_properties(rcon PROPERTIES OUTPUT_NAME "rcon04rel64")
else()
	set_target_properties(rcon PROPERTIES OUTPUT_NAME "rcon04rel32")
endif()

if(WIN32)
  target_link_libraries(rcon wsock32 ws2_32)
  add_definitions(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
endif()

if(WIN32)
	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/libx64/funchook.lib")
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/libx64/distorm.lib")
	else()
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/funchook.lib")
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/distorm.lib")
	endif()
else()

	if((NOT FORCE_32) AND (CMAKE_SIZEOF_VOID_P EQUAL 8))
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/libx64/libfunchook.a")
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/libx64/libdistorm.a")

	else()
		message(STATUS "LINUX 32")
		set_target_properties(rcon PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/libfunchook.a")
		target_link_libraries(rcon "${PROJECT_SOURCE_DIR}/libdistorm.a")
	endif()
endif()